# nac

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/nac/: Cargo.toml
crates/nac-core/: Cargo.toml
crates/nac-core/src/: agents_md.rs  commands.rs  events.rs  lib.rs  paths.rs  runtime.rs  session_service.rs  types.rs  upgrade.rs  view.rs  worker.rs
crates/nac-core/src/agent/: live_tests.rs  mod.rs
crates/nac-core/src/mcp/: config.rs  mod.rs  registry.rs  transport.rs
crates/nac-core/src/model/: anthropic.rs  chat.rs  chatgpt_codex.rs  client.rs  mod.rs  responses.rs  types.rs
crates/nac-core/src/sandbox/: backend.rs  mod.rs  podman.rs  smolvm.rs  ssh.rs
crates/nac-core/src/sessions/: codec.rs  db.rs  mod.rs  snapshot.rs  summary.rs
crates/nac-core/src/skills/: discovery.rs  frontmatter.rs  mod.rs  registry.rs  tool.rs
crates/nac-core/src/store/: mod.rs  schema.rs
crates/nac-core/src/terminal/: manager.rs  session.rs
crates/nac-core/src/tools/: edit.rs  exec_command.rs  mod.rs  read.rs  thread.rs  workset.rs  write.rs
crates/nac-core/src/view/: workspace_diff.rs
crates/nac-queue/: Cargo.toml
crates/nac-queue/assets/: app.css  app.js  index.html
crates/nac-queue/src/: api.rs  git.rs  lib.rs  main.rs  nac_client.rs  pipeline.rs  state.rs  types.rs
crates/nac-server/: Cargo.toml
crates/nac-server/assets/: app.css  app.js  index.html
crates/nac-server/src/: lib.rs  main.rs
crates/nac-tui/: Cargo.toml
crates/nac-tui/src/: lib.rs  main.rs
crates/nac-tui/src/cli/: args.rs  mod.rs
crates/nac-tui/src/tui/: app.rs  commands.rs  mod.rs  render.rs  state.rs  terminal.rs  util.rs  wrap.rs
crates/nac/src/: agent.rs  agents_md.rs  api.rs  events.rs  lib.rs  life.rs  main.rs  mcp.rs  sessions.rs  skills.rs  store.rs  tui.rs  types.rs
crates/nac/src/agent/: mod.rs  preview.rs  tool_exec.rs
crates/nac/src/cli/: args.rs  config.rs  managed_worker.rs  mod.rs  non_tui.rs  repl.rs  resume.rs  sandbox.rs
crates/nac/src/mcp/: config.rs  mod.rs  registry.rs
crates/nac/src/model/: anthropic.rs  backend.rs  client.rs  mod.rs  responses.rs  types.rs
crates/nac/src/sandbox/: mod.rs  podman.rs
crates/nac/src/sessions/: db.rs  mod.rs  snapshot.rs
crates/nac/src/skills/: discovery.rs  frontmatter.rs  mod.rs  registry.rs  tool.rs
crates/nac/src/store/: mod.rs  schema.rs  threads.rs  worksets.rs
crates/nac/src/terminal/: manager.rs  mod.rs  session.rs
crates/nac/src/tools/: edit.rs  exec_command.rs  mod.rs  read.rs  thread.rs  workset.rs  write.rs
crates/nac/src/tui/: app.rs  commands.rs  markdown.rs  mod.rs  render.rs  state.rs  terminal.rs  util.rs
crates/nacserver/: Cargo.toml
crates/nacserver/src/: main.rs  podman.rs  session.rs  task.rs
images/: Dockerfile.base  Dockerfile.python  build.sh
scripts/: install.sh  test-e2e.sh  uninstall.sh
