[package]
name = "nac-queue"
version = "0.1.0"
edition = "2021"

[lib]
name = "nac_queue"

[[bin]]
name = "nac-queue"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"
futures-util = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-stream = "0.3"