[package]
name = "nac-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "nac_server"

[[bin]]
name = "nac-server"
path = "src/main.rs"

[dependencies]
nac-core = { path = "../nac-core" }
anyhow = "1"
async-stream = "0.3"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
