[package]
name = "nac"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", default-features = false, features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
ratatui = "0.30"
crossterm = "0.29"
ratatui-textarea = "0.8"
libc = "0.2"
portable-pty = "0.8"
rmcp = { version = "1.3.0", default-features = false, features = ["client", "reqwest", "transport-child-process", "transport-streamable-http-client-reqwest"] }
toml = "0.8"
url = "2"
serde_yaml_ng = "0.10"
